# eigenbroetler

./: .gitignore  BUILD.md  BUILD.txt  CMakeLists.txt  LICENCE.txt  Makefile  README.md  TODO.txt
cmake/: cfitsio_lib.cmake  eigenbrot_version.h.in  ruby_lib.cmake  settings.cmake
cpp/i18n/: eigenbroetler_de.ts  eigenbrötler_de.ts
cpp/include/: about_dialog.h  arithmetic.h  arithmetic_dialog.ui  array_window.h  array_window_2d.h  array_window_dialogs.h  calculator.h  chirp_dialog.h  chirp_dialog.ui  close_subwindow_dialog.ui  complex_array.h  complex_operations.h  data_selector.h  display_info.h  eigenbroetler_window.h  eigenbrot_window.h  filter_dialog.h  formula_dialog.h  formula_dialog.ui  get_images.h  global_defs.h  pad_data.h  phase_dialog.ui  phase_ops.h  plotter.h  scaled_plotter.h
cpp/source/: about_dialog.cpp  arithmetic.cpp  array_window.cpp  array_window_2d.cpp  array_window_dialogs.cpp  calculator.cpp  calculator_lexer.l  calculator_parser.y  chirp_dialog.cpp  chirpz.cpp  complex_array.cpp  complex_filters.cpp  complex_operations.cpp  data_selector.cpp  display_info.cpp  eigenbroetler_slots.cpp  eigenbroetler_window.cpp  eigenbrot.qrc  eigenbrot_window.cpp  filter_dialog.cpp  formula_dialog.cpp  get_images.cpp  main.cpp  pad_data.cpp  phase_ops.cpp  plotter.cpp
cpp/source/resources/: cross_map.pbm  cross_mask.pbm  curs_map.pbm  curs_mask.pbm
cpp/ui/: about_dialog.ui  chirp_dialog.ui  creation_dialog.ui  export_components_dialog.ui  filter_dialog.ui  formula_dialog.ui  pad_dialog.ui  phase_dialog.ui
external_dependencies/cfitsio/: CMakeLists.txt
ruby/ext/: rb_complex_array.cpp
ruby/lib/: eigenbrötler.rb
ruby/spec/: 5eb4572e81.fit  about_icon.ppm  complex_array_spec.rb
